# git-tidy

./: CLAUDE.md  Makefile  README.md  git-tidy.py  pyproject.toml
src/git_tidy/: __init__.py  cli.py  core.py
tests/: test_advanced_repository_fixtures.py  test_cli.py  test_core.py  test_integration.py  test_repository_fixtures.py  test_repository_integration.py
tests/system/: __init__.py  test_configure_repo.py  test_group_commits.py  test_smart_merge.py  test_split_commits.py  test_system_integration.py
tests/system/framework/: __init__.py  git_tidy_runner.py  result_validator.py
